# bevy-project-template

./: .aiignore  .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.codex/: README.md
.codex/memories/: MEMORY.md
.codex/skills/: README.md
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
Bevy/: AGENTS.md  Cargo.toml  README.md  Trunk.toml  build.rs
Bevy/.cargo/: config.toml
Bevy/Crates/Game/: Cargo.toml
Bevy/Crates/Game/Assets/Shaders/: BulletShader.wgsl
Bevy/Crates/Game/Runtime/: Main.rs
Bevy/Crates/Game/Runtime/Components/: BulletComponent.rs  HUDFpsTextComponent.rs  HUDKeyTextComponent.rs  HUDTextComponent.rs  InputComponent.rs  PlayerComponent.rs
Bevy/Crates/Game/Runtime/Plugins/: BulletPlugin.rs  HUDPlugin.rs  InputPlugin.rs  PlayerPlugin.rs  WorldPlugin.rs
Bevy/Crates/Game/Runtime/Resources/: BulletResource.rs  HUDResource.rs  InputResource.rs
Bevy/Crates/Game/Runtime/Shaders/: BulletShader.rs
Bevy/Crates/Game/Runtime/Systems/: BulletSystem.rs  HUDSystem.rs  InputSystem.rs  PlayerSystem.rs  WorldSystem.rs
Bevy/Crates/Game/Tests/: PlayerTests.rs
Bevy/documentation/: index.html
Scripts/Common/: InstallDependencies.ps1  RunGameWithHotReload.ps1
Scripts/Other/: BuildGameCrate.ps1  BuildHotReloadCrate.ps1  (+10 more)
rust/crates/game_shell/: Cargo.toml  index.html  reload-trigger.txt
rust/crates/game_shell/src/: main.rs
rust/crates/game_shell/src/Components/: BevyInspectorComponent.rs  DemoOverlayTextComponent.rs  DemoRenderItemComponent.rs
rust/crates/game_shell/src/Plugins/: ShellPlugin.rs
rust/crates/game_shell/src/Resources/: BevyInspectorResource.rs  FrameResource.rs  HostStateResource.rs  MetricsResource.rs  ShellContextResource.rs  ShellRuntimeResource.rs
rust/crates/game_shell/src/Systems/: GameLoopSystem.rs  GameRuntimeSystem.rs  InputSystem.rs  NativePlatformSystem.rs  PlatformSystem.rs  SceneSetupSystem.rs  WasmPlatformSystem.rs
scripts/: BuildProject.ps1  InstallProject.ps1  RunProject.ps1  RunProjectWithHotReload.ps1  RunProjectWithHotReloadWasm.ps1  StopProject.ps1
(+91 files in other folders)
