[package]
name = "game"
version = "0.1.0"
edition = "2024"
autotests = false

[[bin]]
name = "game"
path = "Runtime/Main.rs"

[dependencies]
bevy = { version = "0.18.1", features = ["wav"] }
bevy-inspector-egui = "0.36.0"
bevy_simple_subsecond_system = { path = "../HotReload/bevy_simple_subsecond_system" }
shared = { path = "../Shared" }
