[package]
name = "game"
version = "0.1.0"
edition = "2024"
autotests = false

[[bin]]
name = "game"
path = "Runtime/Main.rs"

[features]
default = []
fast-hot-reload = ["bevy/dynamic_linking"]

[dependencies]
avian3d = "0.6"
bevy = { version = "0.18.1", features = ["wav"] }
bevy-inspector-egui = "0.36.0"
bevy_simple_subsecond_system = { path = "../Shared/Runtime/3rdParty/bevy_simple_subsecond_system" }
bevy_tweening = "0.15"
shared = { path = "../Shared" }
